update header resposive

--- a/index.html
+++ b/index.html
@@ -8,23 +8,23 @@
     <title>Beat</title>
 </head>
 <body>
-    <header>
-        <nav>
+    <header class="container_header">
+        <nav class="container_menu">
             <ul>
-                <li></li>
-                <li></li>
-                <li></li>
+                <li class="container_menu--list">Portifolio</li>
+                <li class="container_menu--list">Sobre</li>
+                <li class="container_menu--list">Contatos</li>
             </ul>
         </nav>
         <div>
-            <h1></h1>
-            <img/>
+            <h1 class="container_header--title">No compasso da batida</h1>
+            <img src="./life.png" alt="life-img">
         </div>
-        <nav>
+        <nav class="container_menu--btm">
             <ul>
-                <li></li>
-                <li></li>
-                <li></li>
+                <li class="container_menu--btmList">Arte & Design</li>
+                <li class="container_menu--btmList">Estilo & Musica</li>
+                <li class="container_menu--btmList">Ebook & Videos</li>
             </ul>
         </nav>
     </header>
