--- a/index.html
+++ b/index.html
@@ -28,5 +28,21 @@
             </ul>
         </nav>
     </header>
+    <main class="container_main">
+        <div>
+            <h2>Aquarela</h2>
+            <p>Uma brincadeira com fotos , cores e efeitos, curta, compartilhe e deixe seu comentário, ficarei feliz pelo feedback.</p>
+        </div>
+        <section class="container_main_box">
+            <img src="./dancer.jpeg" alt="" class="container_main--image">
+            <img src="./play.jpeg" alt="" class="container_main--image">
+            <img src="./tape.jpeg" alt="" class="container_main--image">
+            <img src="./girl.jpeg" alt="" class="container_main--image">
+        </section>
+        <p>Veja Mais</p>
+    </main>
+    <footer class="container_footer">
+        
+    </footer>
 </body>
 </html>
